@@ -1,6 +1,8 @@
 pghoard X.X.X (2016-XX-XX)
 ==========================
 
+* New tool, `pghoard_archive_cleanup` to clean up any orphan WAL segments
+  from the object store
 * Basebackup `end-time` and `end-wal-segment` are now stored in metadata and
   used for PITR when `local-tar` basebackups are used.
 * Azure object storage updated to work with the latest python-azure-storage
